--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <title>My Contact</title>
   </head>
   <body>
-    <h3><strong>Mobile No.</strong> 9603762958</h3>
-    <h3><strong>Email Id.</strong><a href="https://www.google.com/intl/en-GB/gmail/about/">siddharthavoorugonda082@gmail.com</a></h3>
+    <h3><strong>Mobile No.</strong> **********</h3>
+    <h3><strong>Email Id.</strong><a href="https://www.google.com/intl/en-GB/gmail/about/">siddhartha@gmail.com</a></h3>
 
 
     <form class="" action="mailto:siddharthavoorugonda0829gmail.com" method="post" enctype="text/plain">
